--- a/contact.html
+++ b/contact.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel ="stylesheet" type="text/css" href="contactStyle.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="contactStyle.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
 </head>
+
 <body>
 
-     <!-- navbar -->
-  <nav class="navbar">
-    <div class="navbar-center">
-      <span class="nav-icon">
-        
-            <a href="index.html"; style="color: rgb(53, 53, 53);"><i class="fas fa-bars"></i></i></a>
-    
-      </span>
-      <img src="./images/logo.svg.jpeg" alt="store logo" />
-  </nav>
-  <!-- end of navbar -->
+    <!-- navbar -->
+    <nav class="navbar">
+        <div class="navbar-center">
+            <span class="nav-icon">
+                <a href="index.html" ; style="color: rgb(53, 53, 53);"><i class="fas fa-bars"></i></a>
+            </span>
+            <img src="./images/logo.svg.jpeg" alt="store logo" />
+    </nav>
+    <!-- end of navbar -->
 
     <section class="contact" style="margin-top: -10px;">
         <div class="content">
@@ -53,7 +54,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="contactForm">
                 <form>
                     <h2>Send Message</h2>
@@ -72,10 +72,8 @@
                     <div class="inputBox">
                         <input type="submit" name="" value="Send">
                     </div>
-
                 </form>
             </div>
-
         </div>
     </section>
 </body>
