--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
             style="font-size:36px; color: rgb(90, 90, 90);"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://www.facebook.com/zainab.alkhaleefa"> <i class="fa fa-facebook"
             style="font-size:36px; color: rgb(90, 90, 90);"></i></a>
-        <p style="font-size: small; color:  rgb(90, 90, 90);margin-left: -450px;">© 2020 AND Digital. All rights
-          reserved.</p>
+       
       </div>
     </div>
 
@@ -114,10 +113,19 @@
 <a href="contact.html"; style="color:rgb(90, 90, 90);">Career</a>
 <a href="contact.html"; style="color:rgb(90, 90, 90);">Legals</a>
 <a href="contact.html"; style="color:rgb(90, 90, 90) ;">Stores</a>
+
     </div>
+    </div>
+    <div class="footerbar">
+      <div class="navbar-center" >
+        <p style="font-size: small; color:  rgb(90, 90, 90); padding-left: 40%;">© 2020 AND Digital. All rights
+          reserved.</p>
+      </div>
+      <div>
+  
     
 
-  </div>
+
   <!-- End of Footer -->
 
 
