--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     </nav>
     <!-- end of navbar -->
 
-    <section class="contact" class="hero" style="margin-top: -10px;">
+    <section class="contact" style="margin-top: -10px;">
         <div class="content">
             <h2 style="margin-top: 100px;">Contact Us</h2>
         </div>
