--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
   <div class="footerbar">
     <div class="navbar-center">
-<a href="contact.html"; style="color:rgb(90, 90, 90) ; margin-top: 30px;">About</a>
-<a href="contact.html"; style="color:rgb(90, 90, 90); margin-top: 30px; ">Our Policy</a>
+<a href="#"; style="color:rgb(90, 90, 90) ; margin-top: 30px;">About</a>
+<a href="#"; style="color:rgb(90, 90, 90); margin-top: 30px; ">Our Policy</a>
 <a href="contact.html"; style="color:rgb(90, 90, 90) ; margin-top: 30px;">Contact</a>
     </div>
     
@@ -110,9 +110,9 @@
   </div>
   <div class="footerbar">
     <div class="navbar-center">
-<a href="contact.html"; style="color:rgb(90, 90, 90);">Career</a>
-<a href="contact.html"; style="color:rgb(90, 90, 90);">Legals</a>
-<a href="contact.html"; style="color:rgb(90, 90, 90) ;">Stores</a>
+<a href="#"; style="color:rgb(90, 90, 90);">Career</a>
+<a href="#"; style="color:rgb(90, 90, 90);">Legals</a>
+<a href="#"; style="color:rgb(90, 90, 90) ;">Stores</a>
 
     </div>
     </div>
